<resources>
    <string name="app_name">Nabilla</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_menu_makanan">Button</string>
    <string name="button_menu_wisata">Button</string>
    <string name="button_about">Button</string>
    <string name="button_menu_hotel">Button</string>
    <string name="button_rita">Button</string>
    <string name="buttonguci">Button</string>
    <string name="buttonalun">Button</string>
    <string name="buttonpoci">Button</string>
    <string name="rita_park">Rita Park</string>
    <string name="guci">Guci</string>
    <string name="taman_poci">Taman Poci</string>
    <string name="alun_alun">Alun Alun</string>
    <string name="makanan">Makanan</string>
    <string name="wisata">Wisata</string>
    <string name="hotel">Hotel</string>
    <string name="about">Tentang</string>
    <string name="soto">soto</string>
    <string name="string_soto" />
    <string name="olos">Olos</string>
    <string name="tahu_aci">Tahu Aci</string>
    <string name="glotak">Glotak</string>
    <string name="soto1">Soto</string>
    <string name="pesonna">Pesonna</string>
    <string name="riez_palace">Riez Palace</string>
    <string name="primebiz">Primebiz</string>
    <string name="karlita">Karlita</string>
    <string name="todoimageview1">TODO</string>
    <string name="todobackground">TODO</string>
    <string name="deskripsi">DESKRIPSI</string>
    <string name="todoimageview2">TODO</string>
    <string name="deskripsi_ritapark">Rita Park Tegal merupakan sebuah pusat wahana rekreasi yang terletak di Kota Tegal, Jawa Tengah. Berlokasi di jalur Pantura yang strategis, Rita Park Tegal juga berdampingan dengan pusat perbelanjaan one-stop shopping di komplek Rita Super Mall. Taman wisata ini mulai dibuka pada Maret 2013 lalu dan menjadi kawasan taman bermain paling luas di Jawa Tengah.\n\nBerbagai wahana permainan yang seru dapat dinikmati seperti:\nCircus Travel (Kereta Sirkus)\nPulau Hiu\nKuda Putar\nKincirKincir\nMini Coaster\ndll.\n\nRita park juga menyediakan bermacam-macam fasilitas untuk kebutuhan pengunjungnya, seperti area parkir yang luas, Toilet, Mushola, counter makanan dan minuman, pujasera, stand penjual souvenir, hingga stool dan shelter yang jumlahnya cukup banyak.\n</string>
    <string name="hargatiket_ritapark">Untuk bisa masuk dan menikmati berbagai wahana di Rita park Tegal, Anda diharuskan membayar biaya tiket masuk yang terbagi dalam 2 pilihan.\n\nPilihan pertama, Anda membayar biaya tiket masuk seharga Rp 25.000 per orang, plus deposit kartu elektronik seharga Rp 10.000 yang akan dikembalikan ketika Anda keluar dari wahana dan mengembalikan kartu tersebut ke petugas. Lalu, untuk menikmati setiap wahana, Anda akan dikenai biaya masing-masing berkisar Rp 10.000 sampai 15.000 per wahana.\n\nPilihan kedua, jika Anda tidak ingin repot, cukup membayar tiket terusan seharga Rp 75.000 dan Anda akan diberikan semacam gelang tangan yang bebas membawa Anda ke wahana mana saja tanpa perlu membayar lagi. Memilih tiket terusan ini, berarti Anda tak perlu membayar tiket masuk lagi.\n</string>
    <string name="lokasi_ritaprk">Wisatawan yang ingin berkunjung ke Rita Park dapat menuju ke alamat Jl. Kolonell Soegiono, No. 155, Pesurungan Kidul, Kota Tegal Provinsi Jawa Tengah. Loksinya yang berada di jalur pantura memberikan kemudahan akses menuju wisata ini. Mengenai jam buka Rita Park Tegal untuk weekday pukul 13.00 – 21.00 WIB. Sedangkan pada akhir pekan pada pukul 09.30 sampai 18.00 WIB.</string>
    <string name="wisataalun2tegal">Wisata Alun Alun Kota Tegal Jawa Tengah adalah salah satu tempat wisata yang berada di desa tegal, kabupaten tegal, provinsi jawa tengah, negara indonesia. Wisata Alun Alun Kota Tegal Jawa Tengah adalah tempat wisata yang ramai dengan wisatawan pada hari biasa maupun hari liburan.\n\nWisata Alun Alun Kota Tegal Jawa Tengah memiliki pesona keindahan yang sangat menarik untuk dikunjungi. Sangat di sayangkan jika anda berada di kota tegal tidak mengunjungi wisata taman kota yang mempunyai keindahan yang tiada duanya tersebut.\n</string>
    <string name="lokasialunaluntegal">Lokasi Alun alun Kota Tegal letaknya berada di Jalan Pancasila, Mangkukusuman, Tegal Tim., Kota Tegal, Jawa Tengah dan tidak jauh dari Balai Kota (pusat pemerintahan Kota Tegal). Terdapat Masjid Agung yang bersejarah dan Patung Garuda, menjadikan alun – alun Tegal salah satu tujuan berwisata yang murah bagi warga Tegal dan sekitarnya untuk menghabiskan waktu bersama keluarga dan kerabat.</string>
    <string name="hargaaluntegal">Untuk dapat memasuki alun alun Tegal tidak dikenakan tarif masuk, jika pengunjung menggunakan kendaraan roda dua atau roda empat maka dikenakan biaya parkir seharaga Rp. 2.000 sampai Rp. 3.000. Pengunjung juga dapat menikmati berbagai macam makanan disektiar alun alun Tegal dengan harga yang cukup terjangkau.\n </string>
    <string name="wisatagucitegal">Taman wisata guci Tegal merupakan sebuah tempat wisata yang terkenal akan pemandian air hangatnya yang berkhasiat bagi tubuh. Tempat wisata berupa pemandian air panas yang terletak di atas ketinggian 1.050 Mdpl ini merupakan objek wisata yang tidak pernah sepi akan pengunjung. Di tempat wisata ini pengunjung dapat berendam di air hangat alami yang di percaya dapat banyak menyembuhkan penyakit, selain itu pengunjung juga dapat menikmati pemandangan alam di sekitar yang indah dan mempesona.\n</string>
    <string name="lokasigucitegal">Lokasi Guci Tegal dapat ditempuh dengan kendaraan pribadi maupun umum. Apabila menggunakan kendaraan umum, dari Kota Tegal pengunjung dapat naik kendaraan menuju Purwokerto. Setelah melewati pusat kota Slawi, pengunjung akan tiba di daerah Kecamatan Lebaksiu. Di pertigaan Yomani terdapat tanda penunjuk jalan ke arah Guci. Jaraknya sekitar 25 kilometer dari sana.\n\nJika berangkat dari Kota Pemalang, pengunjung harus menggunakan kendaraan pribadi karena tidak terdapat angkutan umum menuju Guci. Ambil rute ke arah Purbalingga. Setelah tiba di pertigaan Moga, belok ke kanan menuju ke arah Guci.\n</string>
    <string name="hargagucitegal">Tiket masuk Wana Wisata Guci Tegal pada tahun 2017 adalah sebagai berikut:\n\nHari biasa:\nDewasa : Rp. 5.000, dengan asuransi\nAnak-anak : Rp. 4.500, dengan asuransi\n\nHari libur atau tanggal merah\nDewasa : Rp 7.000, dengan asuransi\nAnak-anak : Rp. 6.500, dengan asuransi\n\n</string>
    <string name="wisatapoci">Wisata Taman Poci Tegal adalah salah satu tempat wisata yang wajib dikunjungi ketika datang di Kota Tegal. Walaupun taman ini berukuran kecil, namun karena suasana yang segar, asli, dan nyaman membuat para pengunjung datang ke tempat ini. Selain berbagai tanaman dan pohon yang asri, terdapat juga patung ceret dan juga cangkir teh yang merupakan ciri khas dari Taman Poci. Jika di sore hari, para pengungjung gemar menghabiskan waktu dengan bersantai dan menikmati jajanan yang ada di sekitar taman.\n</string>
    <string name="lokasiguci">Bagi wisatawan asal Kota Tegal tentu sudah tidak perlu bingung untuk mendatangi lokasi Wisata Taman Poci yang berada di Jalan Kolonel Sudiarto, Panggung, Tegal Timur, Panggung, Tegal Tim., Kota Tegal, Jawa Tengah. Jika Anda menggunakan kendaraan pribadi, Anda tidak perlu khawatir karena telah banyak rambu-rambu jalan yang menunjukkan arah menuju Taman Teh Poci. Namun, bagi Anda yang memanfaatkan transportasi umum, Anda dapat menggunakan bis umum atau angkutan yang menuju Desa Panggung, lalu Anda harus naik ojek untuk sampai ke lokasi Wisata Taman Poci.\n</string>
    <string name="hargapoci">Untuk dapat memasuki Taman Poci Tegal pengunjung tidak dikenakan biaya, terdapat banyak sekali pedagang kaki lima dengan jajanan khas kota tegal, mulai dari makanan ringan hingga makanan berat dengan harga yang relatif terjangkau.\n</string>
    <string name="deskripsi_glotak">Glotak Tegal merupakan makanan khas Tegal yang terbuat dari gembus, aneka bumbu, dan kaldu yang terbuat dari tulang ayam atau sapi. Sebagai catatan tambahan sebutan orang Tegal untuk tulang ayam atau sapi ini adalah balungan. Dinamakan glotak,karena konon saat bumbu tumisan (bawang merah, bawang putih, cabai, sereh, dan tentunya daun salam) yang dicampur dengan kaldu tulang, saat diaduk berbunyi klotak. Oleh sebab itu disebut dengan glotak. Glotak biasanya bisa dinikmati untuk cocolan kerupuk antor atau kerupuk mie goreng. Lebih afdol jika glotak dinikmati dengan alas daun pisang.\n</string>
    <string name="membuatglotak">Berikut bahan dan cara pembuatan Glotak Tegal.\n\nBahan-bahan\n\nKedelai secukupnya\nTulang ayam secukupnya\nCeker atau tetelan sapi secukupnya\nMinyak sayur secukupnya\n\nBumbu\n\n3 siung bawang putih\n4 siung bawang merah\n3 buah cabai hijau\n4 buah cabai merah\nSerai secukupnya\nDaun salam secukupnya\nGula pasir secukupnya\nGaram secukupnya\n</string>
    <string name="bahan2glotak">Cara Membuat Glotak Tegal\n\nPertama, siapkan bahan-bahan dan bumbu-bumbu yang diperlukan untuk proses pengolahan glotak khas Tegal ini\nKedua, ambil kedelai yang sudah dibersihkan lalu cuci dengan air. Tiriskan. Lakukan hal yang sama pada balungan serta ceker ayam\nLalu tumbuk kasar kedelai tersebut dengan cara diuleg dan sebagainya. Sisihkan dulu\nKemudian rebus tulang ayam selama beberapa saat untuk memperoleh kaldu darinya. Saring kaldunya\nSelanjutnya, panaskan minyak sayur kurang lebih 1 sendok makan untuk menumis bumbu-bumbu bawang putih, bawang merah, cabai hijau dan cabai merah yang sudah dihaluskan\nBerikutnya, tambahkan serai dan daun salam sambil diaduk hingga harum\nSetelah itu, masukkan ceker ayam atau tetelan sapi ke dalam tumisan. Jangan lupa tetap diaduk\nSesudahnya, tuangi kaldu tulang ayam tadi dan biarkan tercampur dulu.\nKemudian, masukkan kedelai dan masak hingga kaldu mengental.\nTerakhir, angkat sajian lalu hidangkan di mangkuk saji. Hidangan Glotak Tegal siap dinikmati\n</string>
    <string name="deskripsi_olos">Olos merupakan salah satu jajanan khas Tegal yang dibuat dari tepung aci/kanji yang dikombinasikan dengan tepung terigu dan diberi isian. Olos original versi klasik khas kota Tegal Brebes Jawa Tengah untuk isian biasanya berupa tumisan kol, daun bawang dan irisan cabai rawit. Namun selain berisi isian tersebut, kini olos dapat di kreasikan dengan aneka bahan lainnya. Seperti ditambahkan sayuran wortel layaknya gorengan bakwan, kornet, sosis, daging cincang dan lain sebagainya.\n</string>
    <string name="bahan2olos">Cara Membuat Olos \n\nBahan-bahan Olos :\n\nTepung kanji 50 gram\nTepung terigu100 gram\nGaram seperempat sendok teh\nMerica bubuk seperempat sendok teh\nAir panas secukupnya\nIrisan daun bawang secukupnya\n\nBahan Isi Olos Goreng :\n\nKol 250 gram\nDaun bawang 1 batang\nBawang merah 2 butir\nBawang putih 2 siung\nMerica bubuk seperempat sendok teh\nKaldu ayam\nGaram setengah sendok teh\nGula pasir 1 sendok teh\nCabai rawit 15 buah\n</string>
    <string name="membuatahuaci">Cara Membuat Tahu Aci Enak Dan Lezat :\n\nPotong terlebih dahulu tahu hingga menjadi beberapa bagian menyerupai segitiga, lalu sobek pada bagian tengah tahu untuk mengisi bumbu dan bahan tepung kanji\nBerikutnya ulek semua bahan seperti bawang merah, bawang putih, merica dan garam hingga halus\nKemudian campurkan tepung kanji dan seledri dengan ulekan bumbu tersebut, lalu tambahkan garam dan penyedap rasa, aduk hingga merata\nSetelah itu masukkan bahan tepung kanji yang sudah dicampur bumbu tersebut kedalam tahu sebagai isinya, lakukan hingga bahan tepung dan tahu habis\nSelanjutnya panaskan minyak dalam wajan kemudian gorengkan tahu aci tersebut hingga matang dan garing\nJika tahu aci tersebut sudah matang lalu angkat dan tiriskan\nSajikan tahu aci yang matang bersama dengan cabe rawit atau saus sambal sesuai selera.\n</string>
    <string name="kota_tegal">KOTA TEGAL</string>
    <string name="todologotegal">TODO</string>
    <string name="tentangakudandia">Tentang</string>
    <string name="sotoaja">Soto</string>
</resources>