<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <Button
        android:id="@+id/btn_wisata"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView3"
        android:layout_marginStart="70dp"
        android:background="@drawable/rounded"
        android:text="@string/wisata"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_makanan"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/btn_about"
        android:layout_alignTop="@+id/btn_wisata"
        android:background="@drawable/rounded"
        android:text="@string/makanan"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_hotel"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/btn_wisata"
        android:layout_alignTop="@+id/btn_about"
        android:background="@drawable/rounded"
        android:text="@string/hotel"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="49dp"
        android:layout_marginEnd="71dp"
        android:background="@drawable/rounded"
        android:text="@string/tentangakudandia"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#00ff40"
        android:contentDescription="@string/todobackground"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="133dp"
        android:layout_height="230dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logotegal"
        android:contentDescription="@string/todologotegal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/kota_tegal"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
</RelativeLayout>